--- a/README.ad
+++ b/README.ad
@@ -1,6 +1,14 @@
 # 🏨 Hotel Booking App (MERN Stack)
 
-![MERN Badge](https://img.shields.io/badge/MERN-Stack-green) ![React Badge](https://img.shields.io/badge/React-17.0.2-blue) ![Node.js Badge](https://img.shields.io/badge/Node.js-18.0.0-green) ![MongoDB Badge](https://img.shields.io/badge/MongoDB-Atlas-green) ![Stripe Badge](https://img.shields.io/badge/Payment-Stripe-yellow) ![Email Badge](https://img.shields.io/badge/Email-Nodemailer-orange) ![Home Page](screenshort/Home.png)
+![MERN Badge](https://img.shields.io/badge/MERN-Stack-green) ![React Badge](https://img.shields.io/badge/React-17.0.2-blue) ![Node.js Badge](https://img.shields.io/badge/Node.js-18.0.0-green) ![MongoDB Badge](https://img.shields.io/badge/MongoDB-Atlas-green) ![Stripe Badge](https://img.shields.io/badge/Payment-Stripe-yellow) ![Email Badge](https://img.shields.io/badge/Email-Nodemailer-orange) 
+
+## 🖼 Screenshots
+
+### Home Page
+![Home Page](./screenshots/Home.png)
+
+
+
 
 
 ---
