trying to upload png file

--- a/README.ad
+++ b/README.ad
@@ -2,10 +2,11 @@
 
 ![MERN Badge](https://img.shields.io/badge/MERN-Stack-green) ![React Badge](https://img.shields.io/badge/React-17.0.2-blue) ![Node.js Badge](https://img.shields.io/badge/Node.js-18.0.0-green) ![MongoDB Badge](https://img.shields.io/badge/MongoDB-Atlas-green) ![Stripe Badge](https://img.shields.io/badge/Payment-Stripe-yellow) ![Email Badge](https://img.shields.io/badge/Email-Nodemailer-orange) 
 
-## 🖼 Screenshots
+## 🖼️ Screenshots
 
 ### Home Page
 ![Home Page](./screenshots/Home.png)
+
 
 
 
